// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown matches the snapshots 1`] = `
.c0 > summary {
  list-style: none;
}

.c0 > summary::-webkit-details-marker {
  display: none;
}

.c1 {
  position: relative;
  display: inline-block;
}

<details
  className="c0 c1"
  onToggle={[Function]}
  open={false}
>
  hi
</details>
`;

exports[`Dropdown matches the snapshots 2`] = `
.c0 > summary {
  list-style: none;
}

.c0 > summary::-webkit-details-marker {
  display: none;
}

.c1 {
  position: relative;
  display: inline-block;
}

<details
  className="c0 c1"
  onToggle={[Function]}
  open={false}
>
  hello!
</details>
`;

exports[`Dropdown.Button matches the snapshots 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  color: #24292e;
  background-color: #fafbfc;
  border: 1px solid rgba(27,31,35,0.12);
  box-shadow: 0px 1px 0px rgba(27,31,35,0.04),inset 0px 2px 0px rgba(255,255,255,0.25);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0[disabled] svg {
  opacity: 0.6;
}

.c0:hover {
  background-color: #F3F4F6;
  box-shadow: 0px 1px 0px rgba(209,213,218,0.2),inset 0px 2px 0px rgba(255,255,255,0.1);
}

.c0:focus {
  border-color: transparent;
  box-shadow: 0 0 0 3px rgba(3,102,214,0.3);
}

.c0:active {
  background-color: #edeff2;
  box-shadow: inset 0px 2px 0px rgba(149,157,165,0.1);
  border-color: #d1d5da;
}

.c0:disabled {
  color: #959da5;
  background-color: #fafbfc;
  border-color: #eaecef;
}

.c1 {
  border: 4px solid transparent;
  margin-left: 12px;
  border-top-color: currentcolor;
  border-bottom-width: 0;
  content: '';
  display: inline-block;
  height: 0;
  vertical-align: middle;
  width: 0;
}

<summary
  aria-haspopup="true"
  className="c0"
>
  hi
  <div
    className="c1"
  />
</summary>
`;

exports[`Dropdown.Item matches the snapshots 1`] = `
.c0 {
  display: block;
  padding: 4px 10px 4px 15px;
  overflow: hidden;
  color: #24292e;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 a {
  color: #24292e;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  padding: 4px 10px 4px 15px;
  overflow: hidden;
  color: #24292e;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0:focus,
.c0 a:focus {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
}

.c0:hover,
.c0:hover a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
  outline: none;
}

<li
  className="c0"
>
  hi
</li>
`;

exports[`Dropdown.Item matches the snapshots 2`] = `
.c0 {
  display: block;
  padding: 4px 10px 4px 15px;
  overflow: hidden;
  color: #24292e;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 a {
  color: #24292e;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  padding: 4px 10px 4px 15px;
  overflow: hidden;
  color: #24292e;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0:focus,
.c0 a:focus {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
}

.c0:hover,
.c0:hover a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
  outline: none;
}

<li
  className="c0"
>
  hello!
</li>
`;

exports[`Dropdown.Menu matches the snapshots 1`] = `
.c0 {
  background-clip: padding-box;
  background-color: #fff;
  border: 1px solid rgba(27,31,35,0.15);
  border-radius: 6px;
  box-shadow: 0 3px 12px rgba(27,31,35,0.15);
  left: 0;
  list-style: none;
  margin-top: 2px;
  padding: 5px 0 5px 0 !important;
  position: absolute;
  top: 100%;
  width: 160px;
  z-index: 100;
  right: 0;
  left: auto;
}

.c0::before {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::after {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::before {
  border: 8px solid transparent;
  border-bottom-color: rgba(27,31,35,0.15);
}

.c0::after {
  border: 7px solid transparent;
  border-bottom-color: #fff;
}

.c0 > ul {
  list-style: none;
}

.c0::before {
  top: -16px;
  right: 9px;
  left: auto;
}

.c0::after {
  top: -14px;
  right: 10px;
  left: auto;
}

<ul
  className="c0"
  direction="sw"
>
  <li>
    1
  </li>
  <li>
    2
  </li>
  <li>
    3
  </li>
</ul>
`;

exports[`Dropdown.Menu matches the snapshots 2`] = `
.c0 {
  background-clip: padding-box;
  background-color: #fff;
  border: 1px solid rgba(27,31,35,0.15);
  border-radius: 6px;
  box-shadow: 0 3px 12px rgba(27,31,35,0.15);
  left: 0;
  list-style: none;
  margin-top: 2px;
  padding: 5px 0 5px 0 !important;
  position: absolute;
  top: 100%;
  width: 160px;
  z-index: 100;
  right: 0;
  left: auto;
}

.c0::before {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::after {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::before {
  border: 8px solid transparent;
  border-bottom-color: rgba(27,31,35,0.15);
}

.c0::after {
  border: 7px solid transparent;
  border-bottom-color: #fff;
}

.c0 > ul {
  list-style: none;
}

.c0::before {
  top: -16px;
  right: 9px;
  left: auto;
}

.c0::after {
  top: -14px;
  right: 10px;
  left: auto;
}

<ul
  className="c0"
  direction="sw"
>
  <li>
    1
  </li>
  <li>
    2
  </li>
  <li>
    3
  </li>
</ul>
`;
